--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,8 @@
   "env": {
     "es6": true
   },
-    "extends": "airbnb-base/legacy"
+  "rules": {
+    "no-plusplus": "off"
+  },
+  "extends": "airbnb-base/legacy"
 }
