--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.441.0"
   }
 }
