--- a/prime-generator/serverless.yml
+++ b/prime-generator/serverless.yml
@@ -11,10 +11,21 @@ provider:
   profile: prime-generator-${self:custom.stage}
   environment:
     PRIMES_TABLE: ${self:custom.namespace}-primes
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:PutItem
+      Resource:
+        arn:aws:dynamodb:*:*:table/${self:provider.environment.PRIMES_TABLE}
 
 functions:
   findPrime:
     handler: handler.findPrime
+    events:
+      - schedule:
+          rate: cron(*/10 * * * ? *)
+          enabled: true
 
 resources:
   Resources:
@@ -26,6 +37,6 @@ resources:
           - AttributeName: id
             AttributeType: S
         KeySchema:
-          - AttributeName: email
+          - AttributeName: id
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
