--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
   },
-  "dependencies": {
-    "aws-sdk": "^2.441.0"
-  }
+  "dependencies": {}
 }
