--- a/viewer/package.json
+++ b/viewer/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/akhtarja/serverless-prime-generator#readme",
   "dependencies": {
-    "aws-sdk": "^2.444.0"
+    "aws-sdk": "^2.444.0",
+    "fs": "0.0.1-security"
   }
 }
