added ability to call for primes from API, removed dummy values

--- a/viewer/serverless.yml
+++ b/viewer/serverless.yml
@@ -30,15 +30,4 @@ functions:
       - http:
           path: allprimes
           method: get
-  getFirstPrime:
-    handler: handler.first
-    events:
-      - http:
-          path: firstprime
-          method: get
-  getLastPrime:
-    handler: handler.last
-    events:
-      - http:
-          path: lastprime
-          method: get
+          cors: true
