--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "moment": "^2.24.0",
     "node-fetch": "^2.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
