general cleanup - tooltips, styling, sort order, minor refactor of `viewer` `handler.js`

--- a/generator/serverless.yml
+++ b/generator/serverless.yml
@@ -24,7 +24,7 @@ functions:
     handler: handler.findPrime
     events:
       - schedule:
-          rate: cron(*/60 * * * ? *)
+          rate: rate(60 minutes)
           enabled: true
 
 resources:
