--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 rm s3://primes.tinyrobot.co --recursive && aws s3 cp build s3://primes.tinyrobot.co --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers --recursive --profile prime-generator-prod",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
