--- a/viewer/serverless.yml
+++ b/viewer/serverless.yml
@@ -6,13 +6,13 @@ plugins:
 custom:
   namespace: prime-generator-${self:custom.stage}
   stage: ${opt:stage, self:provider.stage}
-  config_path: "../app/src/config"
+  config_path: '../app/src/config'
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs12.x
   region: us-east-1
-  profile: prime-generator-${self:custom.stage}
+  stage: dev
   environment:
     PRIMES_TABLE: ${self:custom.namespace}-primes
     CUSTOM_API_URL: ${env:PRIME_GENERATOR_CUSTOM_ENDPOINT_URL}
@@ -21,8 +21,7 @@ provider:
       Action:
         - dynamodb:GetItem
         - dynamodb:Scan
-      Resource:
-        arn:aws:dynamodb:*:*:table/${self:provider.environment.PRIMES_TABLE}
+      Resource: arn:aws:dynamodb:*:*:table/${self:provider.environment.PRIMES_TABLE}
 
 functions:
   getAllPrimes:
