--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "aws s3 rm s3://primes.tinyrobot.co --recursive && aws s3 cp build s3://primes.tinyrobot.co --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers --recursive --profile prime-generator-prod",
+    "deploy:ci": "aws s3 rm s3://primes.tinyrobot.co --recursive && aws s3 cp build s3://primes.tinyrobot.co --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers --recursive",
+    "invalidate": "aws cloudfront create-invalidation --distribution-id $PRIME_GENERATOR_CLOUDFRONT_ID --paths \"/*\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
