--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Node
         uses: actions/setup-node@v1
+        with:
+          node-version: '14'
       - name: Install Serverless Framework
         run: npm install -g serverless
       - name: Install dependencies
